# Smart-City-Sample

./: .gitignore  ATTRIBUTION.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md
analytics/: README.md
analytics/common/: .gitignore  CMakeLists.txt  build.sh  filewatch.py  iou_tracker.py  object_tracker.py  rec2db.py  result2db.py  runva.py  update.sh
analytics/crowd/: build.sh  count-crowd.py  language.py  mqtt2db.py  shell.sh
analytics/crowd-counting/: CMakeLists.txt  build.sh  count-crowd.py  rec2db.py  runva.py  shell.sh
analytics/entrance/: CMakeLists.txt  build.sh  count-entrance.py  count-people.py  language.py  mqtt2db.py  shell.sh
analytics/feeder/: CMakeLists.txt  Dockerfile  build.sh  db_ingest.py  db_query.py  docker-entrypoint.sh  main.py  requirements.txt  reset.py  shell.sh  start-service.sh  update.sh
analytics/mqtt2db/: CMakeLists.txt  Dockerfile  build.sh  mqtt2db.py  shell.sh
analytics/mqttserver/: CMakeLists.txt  Dockerfile  build.sh  mosquitto.conf  shell.sh
analytics/object/: .gitignore  CMakeLists.txt  build.sh  detect-object.py  download-models.sh  language.py  mqtt2db.py  shell.sh
analytics/object&queue/: mqtt2db.py
analytics/object-detection/: CMakeLists.txt  build.sh  detect-object.py  detect.py  mqtt2db.py  rec2db.py  runva.py  shell.sh
analytics/object_detection/: CMakeLists.txt  Dockerfile  build.sh  db_ingest.py  interval.py  main.py  mqtt2db.py  rec2db.py  runva.py  shell.sh
analytics/ot-iou/: CMakeLists.txt  Dockerfile  build.sh  ot.py  shell.sh  utils.py
analytics/people-counting/: CMakeLists.txt  build.sh  count-people.py  mqtt2db.py  rec2db.py  runva.py  shell.sh
analytics/queue-counting/: CMakeLists.txt  build.sh  count-queue.py  mqtt2db.py  shell.sh
cloud/: CMakeLists.txt  Dockerfile  README.md  auth.py  build.sh  health.py  hint.py  histogram.py  language.py  nginx.conf  redirect.py  search.py  shell.sh  stats.py  upstream.conf  webc.py
cloud/html/: header.shtml  home.shtml  index.html  office.shtml  recording.shtml
common/: CMakeLists.txt  Dockerfile  build.sh  configuration.py  db_common.py  db_ingest.py  db_query.py  dsl_lex.py  dsl_yacc.py  language_dsl.py  nginx.py  probe.py  shell.sh
deployment/: README.md
deployment/certificate/: .gitignore  CMakeLists.txt  Dockerfile  build.sh  self-sign.sh  shell.sh
deployment/common/: location.m4  service.m4
deployment/docker-swarm/: CMakeLists.txt  README.md  alert.m4  analytics.VCAC-A.m4  analytics.Xeon.m4  analytics.m4  build.sh  camera-discovery.m4  camera.m4  cloud-db.m4  cloud-gateway.m4  cloud-indexing.m4  cloud-storage.m4  cloud-web.m4  cloud.m4  discovery.m4  docker-compose.yml  docker-compose.yml.m4  health-check.m4  mqtt.m4  mqtt2db.m4  network.m4  office-db.m4  office-gateway.m4  office-indexing.m4  office-ot.m4  office-storage.m4  office-webrtc.m4  office.m4  platform.m4  secret.m4  setup-docker.md  smart-upload.m4  start.sh  stop.sh  volume.m4  where-indexing.m4
deployment/kubernetes/: CMakeLists.txt  README.md  alert.yaml.m4  analytics.yaml.m4  build.sh  camera-discovery.yaml.m4  camera.yaml.m4  cloud-db.yaml.m4  cloud-storage.yaml.m4  cloud-web.yaml.m4  discovery.yaml.m4  expose-svc.sh  health-check.yaml.m4  mqtt.yaml.m4  office-db.yaml.m4  office-storage.yaml.m4  office.m4  platform.m4  port-forward.sh  setup-containerd.md  setup-kubernetes.md  smart-upload.yaml.m4  start.sh  stop.sh  storage.yaml.m4  where-indexing.yaml.m4
deployment/openness/: README.md
deployment/tunnel/: .bash_history  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.1.database  Dockerfile.1.db-init  Dockerfile.2.gateway  Dockerfile.2.storage  Dockerfile.3.upload  Dockerfile.4.web  Dockerfile.5.dbinit  build.sh  create-key.sh  shell.sh  tunnel-create.sh  tunnel-key.sh  tunnel.sh
doc/: Smart-Stadium-Use-Case-Analysis.md  Stadium Map.vsdx  cmake.md  dist.md  extend.md  restapi.md  script.md  search.md  vcac-a.md
doc/asset/: Parking Lot.vsdx  camera-idle.xcf  chart.xcf  queue-disconnected.xcf  queue-idle.xcf  queue-streaming.xcf  queue.xcf
gateway/: CMakeLists.txt  Dockerfile  build.sh  gateway.py  hint.py  histogram.py  nginx.conf  search.py  sensorsdb.py  shell.sh  stats.py  upstream.conf
maintenance/: CMakeLists.txt  README.md
maintenance/alert/: CMakeLists.txt  Dockerfile  alert.py  build.sh  cpu_trigger.py  imbalance_trigger.py  (+4 more)
relay/: CMakeLists.txt  Dockerfile  build.sh  custom-entrypoint.sh  shell.sh
script/: backup-image.sh  backup.sh  build.sh  clean-storage.sh  clean-volume.sh  cleanup.sh  db-init.m4  db_query.py  deployment.cmake  forloop.m4  location.m4  loop.m4  mk-demo.sh  mk-dist.sh  osm-host.sh  osm-totiles.sh  osm_host.sh  osm_totiles.sh  png-totiles.sh  png_totiles.sh  probe.py  restore-image.sh  restore.sh  scan-all.cmake  scan-yaml.awk  scan-yml.awk  scenario.m4  sensor-info.m4  service.cmake  setup-vaca-a.sh  setup-vcac-a.sh  shell.sh  update-image.awk  update-image.sh  update-vaca-a.sh  update-vcac-a.sh
sensor/: README.md
storage/: CMakeLists.txt  Dockerfile  Dockerfile.1.nginx  build.sh  cleanup.py  health.py  hint.py  histogram.py  language.py  manage.py  nginx.conf  office.py  search.py  shell.sh  stats.py  storage.py  thumbnail.py  update.sh  upload.py  workload.py
trigger/: README.md
volume/: .gitignore
web/: CMakeLists.txt  Dockerfile  README.md  build.sh  cleanup.sh  count.py  db_hint.py  db_query.py  hint.py  main.py  nginx.conf  search.py  shell.sh  stats.py  thumbnail.py  workload.py
(+473 files in other folders)
